--- a/templates/userprofile/contributors.html
+++ b/templates/userprofile/contributors.html
@@ -41,7 +41,7 @@
 {% block header %}
 
     <section class="rp-post-header margin-top-40">
-        <h4 class="rp-post-title h4-responsive">OURS CONTRIBUTORS</h4> 
+        <h4 class="rp-post-title h4-responsive">{% trans 'Nos contributeurs' %}</h4> 
         <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                 tempor incididunt ut labore et dolore magna aliqua. </p>
     </section>
