--- a/templates/recipe/recipe_draft_list.html
+++ b/templates/recipe/recipe_draft_list.html
@@ -25,13 +25,13 @@
                          <tr>
                             <td>{{recipe.created_at|date:'F j, Y'}}</td>
                             <td><a href="#">{{recipe.category.name}}</a></td>
-                            <td><a href="{% url 'recipe_preview' pk=recipe.pk %}">{{recipe.title}}</a></td>
+                            <td><a href="{% url 'recipe_preview' slug=recipe.slug %}">{{recipe.title}}</a></td>
                             <td><a href="">{{recipe.author}}</a></td>
                             <td>
                             <a href="javascript:;" data-toggle="collapse" data-target="#publish_{{recipe.id}}"><i class="fa fa-fw fa-arrows-v"></i> Publish <i class="fa fa-fw fa-caret-down"></i></a>
                                 <ul id="publish_{{recipe.id}}" class="collapse">
                                     <li>
-                                        <a href="{% url 'recipe_publish' pk=recipe.pk %}">Yes</a>
+                                        <a href="{% url 'recipe_publish' slug=recipe.slug %}">Yes</a>
                                     </li>
                                     <li>
                                         <a data-toggle="modal" data-target="#unpublish{{recipe.id}}">No</a>
@@ -53,7 +53,7 @@
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'recipe_delete' pk=recipe.pk %}" type="submit" class="btn btn-danger">Supprimer</a>
+                                                <a href="{% url 'recipe_delete' slug=recipe.slug %}" type="submit" class="btn btn-danger">Supprimer</a>
                                               </div>
                                             </div>
                                           </div>
