--- a/templates/recipe/video_publish_list.html
+++ b/templates/recipe/video_publish_list.html
@@ -53,7 +53,7 @@
                                     {% for video in videos %}
                                     <tr>
                                         <td>{{video.published_at|date:'F j, Y'}}</td>
-                                        <td><a href="{% url 'video_preview' pk=video.pk%}">{{video.title}}</a></td>
+                                        <td><a href="{% url 'video_preview' slug=video.slug%}">{{video.title}}</a></td>
                                         <td><a href="">{{video.view}}</a></td>
                                         <td><a href="">{{video.like}}</a></td>
                                         <td><a href="">{{video.author}}</a></td>
@@ -61,10 +61,10 @@
                                             <a href="javascript:;" data-toggle="collapse" data-target="#action_{{video.id}}"><i class="fa fa-fw fa-arrows-v"></i> Actions <i class="fa fa-fw fa-caret-down"></i></a>
                                             <ul id="action_{{video.id}}" class="collapse">
                                                 <li>
-                                                    <a href="{% url 'video_preview' pk=video.pk%}"><i class="fa fa-eye" aria-hidden="true"></i>Voir</a>
+                                                    <a href="{% url 'video_preview' slug=video.slug%}"><i class="fa fa-eye" aria-hidden="true"></i>Voir</a>
                                                 </li>
                                                 <li>
-                                                    <a href="{% url 'video_update' pk=video.pk%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>MOdifier</a>
+                                                    <a href="{% url 'video_update' slug=video.slug%}"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>MOdifier</a>
                                                 </li>
                                                 <li>
                                                     <a data-toggle="modal" data-target="#deletevideo{{video.id}}"><i class="fa fa-trash-o" aria-hidden="true"></i>Supprimer</a>
@@ -87,7 +87,7 @@
                                               </div>
                                               <div class="modal-footer">
                                                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <a href="{% url 'video_delete' pk=video.pk %}" type="submit" class="btn btn-danger"> Supprimer</a>
+                                                <a href="{% url 'video_delete' slug=video.slug %}" type="submit" class="btn btn-danger"> Supprimer</a>
                                               </div>
                                             </div>
                                           </div>
