--- a/templates/base.html
+++ b/templates/base.html
@@ -208,15 +208,15 @@
                                  <li class="dropdown">
                                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">A propos</a>
                                     <ul class="dropdown-menu">
-                                      
+                                      <!-- 
                                         {% get_flatpages as flatpages %}
                                         
                                        {% for page in flatpages %}
-                                            <li><a href="/pages{{ page.url }}">L'équipe</a></li>
-                                       {% endfor %}
+                                           
+                                       {% endfor %} -->
                                        
-                                      
-                                       <hr>
+                                        <li><a href="">L'équipe</a></li>
+                                        <hr>
                                        <li><a href="{% url 'contributors' %}">Contributeurs</a></li>
                                        <hr>
                                        <li><a href="">Mentions Légales</a></li>
@@ -257,17 +257,17 @@
 
 
 
-       {% block slide %} 
+{% block slide %} 
 
-       
-        {% endblock slide %}
-        {% block header %}
+{% endblock slide %}
 
-   
-        {% endblock header %}
+
+{% block header %}
+
+{% endblock header %}
+
 
 {% block content_base %}
-
 
 {% endblock content_base %}
 
