--- a/templates/blog/post_detail.html
+++ b/templates/blog/post_detail.html
@@ -81,7 +81,7 @@
                         <li><i class="fa fa-eye cook-second-color" aria-hidden="true"></i>{{post.view}}</li>
 
                         <li>
-                            <a class="likepost" data-post-pk="{{post.pk}}" type="button"><i class="fa fa-heart cook-second-color" aria-hidden="true"></i><span id="count-like-{{post.pk}}"></a>{{post.like}}</span>
+                            <a class="likepost" data-post-pk="{{post.pk}}" type="button"><i class="fa fa-heart cook-second-color" aria-hidden="true"></i></a><span class="count-like-{{post.pk}}">{{post.like}}</span>
                         </li>
                         {% get_comment_count for post as comment_count %}
                         <li><a href="#commentaire"><i class="fa fa-comments cook-second-color" aria-hidden="true"></i></a>{{comment_count}}</li>
