--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -139,13 +139,17 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{user.username}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
+                            <a href="{% url 'userprofile_update' %}"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+			<li>
+                            <a href="{% url 'password_change' %}"><i class="fa fa-fw fa-user"></i> Change password</a>
+
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
+                            <a href="{% url 'userprofile_update' %}"><i class="fa fa-fw fa-gear"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
                        
@@ -159,7 +163,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href="index.html"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
+                        <a href="{% url 'stats' %}"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
                     </li>
                     <li>
                         <a href="charts.html"><i class="fa fa-fw fa-bar-chart-o"></i> Charts</a>
@@ -168,6 +172,9 @@
                         <a href="javascript:;" data-toggle="collapse" data-target="#recipe"><i class="fa fa-cutlery" aria-hidden="true"></i> {% trans 'Recettes' %} <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="recipe" class="list-unstyled collapse">
                             <li>
+                                <a href="{% url 'recipe_new_categ' %}">{% trans 'Ajouter une catégorie' %}</a>
+                            </li>
+			    <li>
                                 <a href="{% url 'recipe_new' %}">{% trans 'Ajouter' %}</a>
                             </li>
                             <li>
@@ -183,6 +190,9 @@
                         Blog <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="blog" class="list-unstyled collapse">
                             <li>
+                                <a href="{% url 'post_new_categ' %}">{% trans 'Ajouter une catégorie au blog' %}</a>
+                            </li>
+			    <li>
                                 <a href="{% url 'post_new' %}">{% trans 'Ajouter' %}</a>
                             </li>
                             <li>
