--- a/templates/userprofile/contributors.html
+++ b/templates/userprofile/contributors.html
@@ -10,7 +10,7 @@
 	
 	<section id="home" class="home">
     
-      <!--   <div class="overlay">
+      <!--<div class="overlay">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-12 ">
@@ -76,9 +76,9 @@
 		         		{% else %} {{user.username}} {% endif %}</h4>
             <small></small>
 
-            <p class="margin-top-20">{{user.profile.bio}}
+           <!--  <p class="margin-top-20">{{user.profile.bio}}
             
-            </p>
+            </p> -->
         </div>
     </div>
   
