--- a/templates/blog/post_new.html
+++ b/templates/blog/post_new.html
@@ -16,7 +16,7 @@
                          {{ form.media }}
 		                  {{ form.as_p }}
                         
-	                	<button type="submit" class="save btn btn-default">{% trans 'Envoyer' %}</button>
+	                	<button type="submit" class="save btn btn-default">{% trans 'Enregistrer' %}</button>
 	                </form>
                 </div>
                 
