--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,57 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% load i18n %}
-{% block head_title %}{% trans "Change Password" %}{% endblock %}
+{% load account %}
 
-{% block content %}
-    <h1>{% trans "Change Password" %}</h1>
-    <p>{% trans 'Your password is now changed.' %}</p>
+{% block head_title %}{% trans "Set Password" %}{% endblock %}
+
+{% block slide %}
+   
+<section id="home" class="home">
+    
+      <!--   <div class="overlay">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 ">
+                        <div class="main_home_slider">
+                            <div class="single_home_slider">
+                                <div class="main_home wow"> -->
+                                    <!-- <h1>Cook' iT</h1> -->
+                                    <img src="{% static 'assets/images/food_1.jpg' %}">
+                                    <!-- <p class="subtitle">Découvir, Cuisiner, Savourer</p>
+
+                                    <div class="home_btn">
+                                        <a href="" class="btn btn-primary">LEARN MORE</a>
+                                    </div> -->
+<!-- 
+                                </div>
+                            </div>
+                            
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </section>
+{% endblock slide %}
+
+{% block header %}
+
+   
+{% endblock header %}
+
+
+{% block content_base %}
+<section class="portfolio">
+    <div class="container">                                 
+        <div class="row ">
+
+    		<div class="col-md-offset-2 col-md-8">
+    			<h1>{% trans "Change Password" %}</h1>
+    			<p>{% trans 'Your password is now changed.' %}</p> 
+    		</div>  
+        </div>  
+    </div>
+</section> 
 {% endblock %}
