--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% load i18n %}
 
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
