--- a/templates/account/password_set.html
+++ b/templates/account/password_set.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
-
+{% load staticfiles %}
 {% load i18n %}
+{% load account %}
 
 {% block head_title %}{% trans "Set Password" %}{% endblock %}
 
