--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -1,6 +1,7 @@
-{%extends "base.html" %}
-
+{% extends "base.html" %}
+{% load staticfiles %}
 {% load i18n %}
+{% load account %}
 
 {% block head_title %}{% trans "Sign Up Closed" %}{% endblock %}
 
