--- a/templates/base_admin.html
+++ b/templates/base_admin.html
@@ -25,16 +25,16 @@
     <title>TogoKuizine - Administration</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'dashboard/css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="{% static 'admin/css/sb-admin.css' %}" rel="stylesheet">
+    <link href="{% static 'dashboard/css/sb-admin.css' %}" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="{% static 'admin/css/plugins/morris.css' %}" rel="stylesheet">
+    <link href="{% static 'dashboard/css/plugins/morris.css' %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="{% static 'admin/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'dashboard/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{% static 'assets/css/toastr.css' %}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -64,7 +64,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Togokuizine</a>
+                <a class="navbar-brand" href="/">TogoKuizine</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -302,15 +302,15 @@
         </div>
 
 <!-- jQuery -->
-    <script src="{% static 'admin/js/jquery.js' %}"></script>
+    <script src="{% static 'dashboard/js/jquery.js' %}"></script>
     
     <!-- Bootstrap Core JavaScript -->
-    <script src="{% static 'admin/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/bootstrap.min.js' %}"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="{% static 'admin/js/plugins/morris/raphael.min.js' %}"></script>
-    <script src="{% static 'admin/js/plugins/morris/morris.min.js' %}"></script>
-    <script src="{% static 'admin/js/plugins/morris/morris-data.js' %}"></script>
+    <script src="{% static 'dashboard/js/plugins/morris/raphael.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/plugins/morris/morris.min.js' %}"></script>
+    <script src="{% static 'dashboard/js/plugins/morris/morris-data.js' %}"></script>
     <script  type="text/javascript" src="{% static 'assets/js/jquery.min.js' %}"></script>
 
     
