--- a/templates/400.html
+++ b/templates/400.html
@@ -1,10 +1,6 @@
 {% extends 'layout/layout.html' %}  
 
 {% load staticfiles %}
-{% load thumbnail %}
-{% load widget_tweaks %}
-{% load humanize %}
-{% load flatpages %}
 {% load i18n %}
 
 {% block content %}
@@ -14,7 +10,7 @@
 				<h1>4<span>0</span>0</h1>
 			</div>
 			<h2>Bad request!</h2>
-			<a href="/" class="btn btn-success">Accueil</a>
+			<a href="/" class="btn btn-default">Accueil</a>
 			
 		</div>
 	</div>
