--- a/templates/500.html
+++ b/templates/500.html
@@ -1,10 +1,6 @@
 {% extends 'layout/layout.html' %}  
 
 {% load staticfiles %}
-{% load thumbnail %}
-{% load widget_tweaks %}
-{% load humanize %}
-{% load flatpages %}
 {% load i18n %}
 
 {% block content %}
@@ -14,7 +10,7 @@
 				<h1>5<span>0</span>0</h1>
 			</div>
 			<h2>Une erreur est survenue sur le serveur</h2>
-			<a href="/" class="btn btn-primary">Accueil</a>
+			<a href="/" class="btn btn-default">Accueil</a>
 			
 		</div>
 	</div>
