--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,5 @@
-{% extends 'layout/layout.html' %}  
-
+{% extends 'layout/layout.html' %}
 {% load staticfiles %}
-{% load thumbnail %}
-{% load widget_tweaks %}
-{% load humanize %}
-{% load flatpages %}
 {% load i18n %}
 
 {%block content %}
@@ -14,7 +9,7 @@
 				<h1>4<span>0</span>4</h1>
 			</div>
 			<h2>Page introuvable</h2>
-			<a href="/" class="btn btn-primary">Accueil</a>
+			<a href="/" class="btn btn-default">Accueil</a>
 			
 		</div>
 	</div>
