--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         <title>TogoKuizine</title>
         <meta name="description" content="Cuisine, Togo">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="{% static 'assets/images/tk-icon.png' %}" />
 
         <link rel="stylesheet" href="{% static 'assets/css/fonticons.css' %}">
         <link rel="stylesheet" href="{% static 'assets/fonts/stylesheet.css' %}">
@@ -65,8 +65,8 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-    <!--  <div class='preloader'><div class='loaded'>&nbsp;</div></div> -->
-    <div class="top-bar hidden-sm hidden-xs">
+     <div class='preloader'><div class='loaded'>&nbsp;</div></div>
+     <div class="top-bar hidden-sm hidden-xs">
         <div class="container">
             <div class="col-md-12">
                 
